# my_projects

./: .gitignore  pyproject.toml  requirements.txt
AI_image_classification_processor/: .gitignore  README.md  download_yolo_standard.py  project1.py  project2.py  project3.py
Learn2learn_project/: learn_2_learn.ipynb
ML_app/: app.py  ml_utils.py
NAD_controller_automation/: NADSourceSwitch.ahk  README.md  monitor_logger.py  nad_control.py
clip_highlighter_with_MCP/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
clip_highlighter_with_MCP/scripts/: bootstrap.ps1
clip_highlighter_with_MCP/src/: __init__.py  main.py
clip_highlighter_with_MCP/src/config/: settings.py
clip_highlighter_with_MCP/src/editing/: __init__.py  captions.py  cutter.py  reframer.py
clip_highlighter_with_MCP/src/highlights/: __init__.py  llm_highlighter.py
clip_highlighter_with_MCP/src/ingest/: __init__.py  youtube_ingestor.py
clip_highlighter_with_MCP/src/mcp/: __init__.py  contracts.py  errors.py  server.py
clip_highlighter_with_MCP/src/models/: __init__.py  schemas.py
clip_highlighter_with_MCP/src/pipeline/: orchestrator.py
clip_highlighter_with_MCP/src/transcription/: whisper_service.py
clip_highlighter_with_MCP/src/utils/: logging.py
clip_highlighter_with_MCP/tests/integration/: test_pipeline_smoke.py
clip_highlighter_with_MCP/tests/unit/: test_captions.py  test_cutter.py  test_highlights.py  test_main.py  test_mcp_server.py  test_reframer.py  test_settings.py  test_whisper_service.py  test_youtube_ingestor.py
cv_and_coverletter_agent/: .env.example  .gitignore  PROJECT_INSTRUCTIONS.md  README.md  requirements.txt
(+139 files in other folders)
