[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clip-highlighter-with-mcp"
version = "0.1.0"
description = "Local-first AI clip highlighter pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "structlog>=24.2.0",
  "aiohttp>=3.10.0",
  "yt-dlp>=2026.1.1",
  "faster-whisper>=1.1.0",
  "openai>=1.54.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.6.0",
  "black>=24.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
